--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <input type="text" id="search-input" placeholder="Search for a city...">
             <button type="submit">Search</button>
         </form>
-        <div id="current-weather"></div>
-        <h2>5-Day Forecast</h2>
+        <div id="current-weather" class="hidden"></div>
+        <h2 id="forecast-heading" class="hidden">5-Day Forecast</h2>
         <div id="forecast" class="forecast-container"></div>
     </div>
     <script src="script.js"></script>
